--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -29,7 +29,7 @@
 
 <h2>Login</h2>
 
-<form action="/homepage" method="POST" id="form-container">
+<form action="/login" method="POST" id="form-container">
   <label for="username">Username</label>
   <input id="username" type="text" name="username" placeholder="JonSnow">
   <br><br>
