--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -5,12 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/homepage.css" />
 </head>
-<body>
 
-  {{{body}}}
+ <header>
+   <h1 role="banner"><span class="o">easy</span>tune</h1>
+    <nav role="navigation">
+        <ul id="sub">
+          <li>
+            <form action="../profile"> <input type="submit" value="Profile"></form></li>
+          <li><form action="../signup"><input type="submit" value="Logout"></form></li>
+        </ul>
+   </nav>
+    </header>
+<body>
+ <section role="main">
+   <div class="row">
+        <div class="block">
+          <h1>Drum and Bass</h1>
+          <img src="public/images/DNB.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Jazz</h1>
+          <img src="public/images/Jazz.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Metal</h1>
+          <img src="public/images/Metal.png" width="100px" height= "100px"/>
+        </div>
+  </div>
+   <div class="row">
+        <div class="block">
+          <h1>Acoustic</h1>
+          <img src="public/images/Acoustic.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Latin</h1>
+          <img src="public/images/Latin.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Punk</h1>
+          <img src="public/images/Punk.png" width="100px" height= "100px"/>
+        </div>
+  </div>
+  <div class="row">
+        <div class="block">
+          <h1>80s</h1>
+          <img src="public/images/80s.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>HipHop</h1>
+          <img src="public/images/HipHop.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Dub and Reggae</h1>
+          <img src="public/images/DubnReggae.png" width="100px" height= "100px"/>
+        </div>
+  </div>
+  <div class="row">
+        <div class="block">
+          <h1>Classical</h1>
+          <img src="public/images/Classical.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Grunge</h1>
+          <img src="public/images/Grunge.png" width="100px" height= "100px"/>
+        </div>
+        <div class="block">
+          <h1>Folk</h1>
+          <img src="public/images/Folk.png" width="100px" height= "100px"/>
+        </div>
+  </div>
+ </section>
 
   <script src="/javascripts/script.js"></script>
 </body>
+</footer>
+  </body>
 </html>
+</html>
+
