--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -27,6 +27,79 @@ section[role="main"] {
   margin: 0 auto;
 }
 
+/* generes */
+.drum {
+  background-image: url('../images/DNB.png');
+  background-size: cover;
+  height: 150px;
+}
+
+.jazz {
+  background-image: url('../images/Jazz.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.metal {
+  background-image: url('../images/Metal.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.Acoustic {
+  background-image: url('../images/Acoustic.png');
+  background-size: cover;
+  height: 150px;
+}
+
+.Latin{
+  background-image: url('../images/Latin.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.Punk {
+  background-image: url('../images/Punk.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.eighties {
+  background-image: url('../images/80s.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.hiphop {
+  background-image: url('../images/HipHop.png');
+  background-size: cover;
+  height: 150px;
+}
+
+.dub {
+  background-image: url('../images/DubnReggae.jpg');
+  background-size: cover;
+  height: 150px;
+}
+
+.classical {
+  background-image: url('../images/Classical.png');
+  background-size: cover;
+  height: 150px;
+}
+.Grunge {
+  background-image: url('../images/Grunge.jpg');
+  background-size: cover;
+  height: 150px;
+}
+.folk{
+  background-image: url('../images/Folk.jpg');
+  background-size: cover;
+  height: 150px;
+}
+/* end of generes */
+
+
 .row {
   width: 95%;
   margin: 0 auto;
@@ -35,7 +108,8 @@ section[role="main"] {
   clear: both;
 }
 .block {
-  background: #128525;
+  color: white;
+  border: white;
   display: block;
   width: 32%;
   height: 150px;
@@ -56,7 +130,6 @@ section[role="main"] {
 } */
 
 .h1 {
-  text: black;
   font-family: Roboto;
   font-size: 50px;
 }
