--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -21,59 +21,47 @@
 <body>
  <section role="main">
    <div class="row">
-        <div class="block">
+        <div class="block drum">
           <h1>Drum and Bass</h1>
-          <img src="public/images/DNB.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block jazz">
           <h1>Jazz</h1>
-          <img src="public/images/Jazz.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block metal">
           <h1>Metal</h1>
-          <img src="public/images/Metal.png" width="100px" height= "100px"/>
         </div>
   </div>
    <div class="row">
-        <div class="block">
+        <div class="block acoustic">
           <h1>Acoustic</h1>
-          <img src="public/images/Acoustic.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block latin">
           <h1>Latin</h1>
-          <img src="public/images/Latin.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block Punk">
           <h1>Punk</h1>
-          <img src="public/images/Punk.png" width="100px" height= "100px"/>
         </div>
   </div>
   <div class="row">
-        <div class="block">
+        <div class="block eighties">
           <h1>80s</h1>
-          <img src="public/images/80s.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block hiphop">
           <h1>HipHop</h1>
-          <img src="public/images/HipHop.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block dub">
           <h1>Dub and Reggae</h1>
-          <img src="public/images/DubnReggae.png" width="100px" height= "100px"/>
         </div>
   </div>
   <div class="row">
-        <div class="block">
+        <div class="block classical">
           <h1>Classical</h1>
-          <img src="public/images/Classical.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block grunge">
           <h1>Grunge</h1>
-          <img src="public/images/Grunge.png" width="100px" height= "100px"/>
         </div>
-        <div class="block">
+        <div class="block folk">
           <h1>Folk</h1>
-          <img src="public/images/Folk.png" width="100px" height= "100px"/>
         </div>
   </div>
  </section>
