--- a/views/search.hbs
+++ b/views/search.hbs
@@ -33,7 +33,7 @@
     <a href="#">
       <li>Three Event</li>
     </a>
-    <li>Berlin sleeps - we've found no {{{genre}}} events</li>
+    <li class="noResult">Berlin sleeps - we've found no {{{genre}}} events</li>
 
   </ul>
 
