--- a/public/stylesheets/searchStyle.css
+++ b/public/stylesheets/searchStyle.css
@@ -21,13 +21,12 @@ display: flex;
 .filter {
   margin: 0px 60px -30px 60px !important;
   height: 60px !important;
+  justify-content: flex-end !important;
 }
 
 .filter input {
-  -webkit-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  width: 400px;
   margin: auto 60px !important;
+  flex: 1;
 }
 
 .flex-box li, .filter { 
@@ -54,6 +53,6 @@ a {
   text-decoration: none;
 }
 
-li:hover { 
+li:hover:not(.noResult) { 
   background-color: yellow;
 }
