--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,8 +1,7 @@
 <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>easytune</h1>
 
 <h2>Sign Up</h2>
 
