we had lost the homepage css - I've changed the link now and all good

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -6,26 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/homepage.css" />
 </head>
-  <title>{{title}}</title>
+<title>{{title}}</title>
 
 <body>
 
 
- <header>
-   <h1 role="banner"><span class="o">easy</span>tune</h1>
+  <header>
+    <h1 role="banner"><span class="o">easy</span>tune</h1>
     <nav role="navigation">
-        <ul id="sub">
-          <li>
-            <form action="../profile"> <input type="submit" value="Profile"></form></li>
-          <li><form action="../signup"><input type="submit" value="Logout"></form></li>
-        </ul>
-   </nav>
-    </header>
-<body>
- <section role="main">
-   <div class="row">
+      <ul id="sub">
+        <li>
+          <form action="../profile"> <input type="submit" value="Profile"></form>
+        </li>
+        <li>
+          <form action="../signup"><input type="submit" value="Logout"></form>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <body>
+    <section role="main">
+      <div class="row">
         <div class="block drum">
           <h1>Drum and Bass</h1>
         </div>
@@ -35,8 +39,8 @@
         <div class="block metal">
           <h1>Metal</h1>
         </div>
-  </div>
-   <div class="row">
+      </div>
+      <div class="row">
         <div class="block acoustic">
           <h1>Acoustic</h1>
         </div>
@@ -46,8 +50,8 @@
         <div class="block Punk">
           <h1>Punk</h1>
         </div>
-  </div>
-  <div class="row">
+      </div>
+      <div class="row">
         <div class="block eighties">
           <h1>80s</h1>
         </div>
@@ -57,8 +61,8 @@
         <div class="block dub">
           <h1>Dub and Reggae</h1>
         </div>
-  </div>
-  <div class="row">
+      </div>
+      <div class="row">
         <div class="block classical">
           <h1>Classical</h1>
         </div>
@@ -68,14 +72,13 @@
         <div class="block folk">
           <h1>Folk</h1>
         </div>
-  </div>
- </section>
+      </div>
+    </section>
 
-  <script src="/javascripts/script.js"></script>
-</body>
-
-</footer>
+    <script src="/javascripts/script.js"></script>
   </body>
 
-</html>
+  </footer>
+</body>
 
+</html>
