added get me home button

--- a/views/search.hbs
+++ b/views/search.hbs
@@ -47,8 +47,10 @@
     <a href="#">
       <li>Three Event</li>
     </a>
-    <li class="noResult">Berlin sleeps - we've found no {{{genre}}} events</li>
-
+    <li class="noResult">Berlin sleeps - we've found no {{{genre}}} events
+      <br>
+      <form action="/"><input type="submit" value="Get Me Home!"></form>
+    </li>
   </ul>
 
   <script src="/javascripts/script.js"></script>
