--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/stylesheets/signup.css">
 <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
