--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,3 +9,5 @@
   <link rel="stylesheet" href="/stylesheets/profile.css" />
 </head>
 <h1>hello</h1>
+
+</html>
