--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -15,21 +15,21 @@
 
 <section role="main">
   <div class="row">
-    <div class="block drum">
+    <div class="block Drum">
       <h1>Drum and Bass</h1>
     </div>
-    <div class="block jazz">
+    <div class="block Jazz">
       <h1>Jazz</h1>
     </div>
-    <div class="block metal">
+    <div class="block Metal">
       <h1>Metal</h1>
     </div>
   </div>
   <div class="row">
-    <div class="block acoustic">
+    <div class="block Acoustic">
       <h1>Acoustic</h1>
     </div>
-    <div class="block latin">
+    <div class="block Latin">
       <h1>Latin</h1>
     </div>
     <div class="block Punk">
@@ -37,24 +37,24 @@
     </div>
   </div>
   <div class="row">
-    <div class="block eighties">
+    <div class="block Eighties">
       <h1>80s</h1>
     </div>
-    <div class="block hiphop">
+    <div class="block Hiphop">
       <h1>HipHop</h1>
     </div>
-    <div class="block dub">
+    <div class="block Dub">
       <h1>Dub and Reggae</h1>
     </div>
   </div>
   <div class="row">
-    <div class="block classical">
+    <div class="block Classical">
       <h1>Classical</h1>
     </div>
-    <div class="block grunge">
+    <div class="block Grunge">
       <h1>Grunge</h1>
     </div>
-    <div class="block folk">
+    <div class="block Folk">
       <h1>Folk</h1>
     </div>
   </div>
