--- a/views/search.hbs
+++ b/views/search.hbs
@@ -12,7 +12,7 @@
       <li class="nav">
         <form action="../profile"> <input type="submit" value="Profile"></form>
       </li>
-      <li class="nav">
+      <li class="nav" id="logoutBtn">
         <form action="../signup"><input type="submit" value="Logout"></form>
       </li>
     </ul>
