--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -7,10 +7,7 @@
     Already have an account? Login!
   </p>
 
-
-
-
-  <form action="/login" method="POST" id="form-container2">
+  <form action="/login" method="POST" id="form-container">
     <div class="flex-box">
       <label for="username">Username</label>
       <input id="username2" type="text" name="username" placeholder="JonSnow">
@@ -35,9 +32,9 @@
 </div>
 
 <div class="flex-container2">
-  <h2>Sign Up</h2>
 
-  <form action="/signup" method="POST" id="form-container">
+  <form action="/signup" method="POST" id="form-container2">
+    <h2>Sign Up</h2>
     <label for="name">Name</label>
     <input id="name" type="text" name="name" placeholder="JonSnow">
     <br><br>
