--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -58,6 +58,11 @@
       <h1>Folk</h1>
     </div>
   </div>
+
+  <div>
+    <div class="hover"></div>
+  </div>
+
 </section>
 
 <script src="/javascripts/script.js"></script>
