--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -5,9 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/profile.css" />
 </head>
-<h1>hello</h1>
+
+<header>
+  <h1 role="banner"><span class="o">easy</span>tune</h1>
+  <nav role="navigation">
+    <ul id="sub">
+      <li>
+        <form action="../index"> <input type="submit" value="Back to Homepage"></form>
+      </li>
+      <li>
+        <form action="../signup"><input type="submit" value="Logout"></form>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<head>
+  <div class="container">
+
+    <div class="top">
+      <p>"Person's Name"</p>
+    </div>
+
+    <div class="main">
+    </div>
 
 </html>
