--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,7 +13,7 @@
   <nav role="navigation">
     <ul id="sub">
       <li>
-        <form action="../index"> <input type="submit" value="Back to Homepage"></form>
+        <form action="../homepage"> <input type="submit" value="Back to Homepage"></form>
       </li>
       <li>
         <form action="../signup"><input type="submit" value="Logout"></form>
