--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -18,60 +18,60 @@
 <section role="main">
   <div class="row">
     <div class="block Drum">
-      <a href="/search">
+      <a href="/search?genre=drum">
         <h1>Drum and Bass</h1>
       </a>
     </div>
     <div class="block Jazz">
-      <a href="/search">
+      <a href="/search?genre=jazz">
         <h1>Jazz</h1>
       </a>
     </div>
     <div class="block Metal">
-      <a href="/search">
+      <a href="/search?genre=metal">
         <h1>Metal</h1>
       </a>
     </div>
   </div>
   <div class="row">
     <div class="block Acoustic">
-      <a href="/search">
+      <a href="/search?genre=acoustic">
         <h1>Acoustic</h1>
       </a>
     </div>
-    <div class="block Latin"><a href="/search">
+    <div class="block Latin"><a href="/search?genre=latin">
         <h1>Latin</h1>
       </a>
     </div>
-    <div class="block Punk"><a href="/search">
+    <div class="block Punk"><a href="/search?genre=punk">
         <h1>Punk</h1>
       </a>
     </div>
   </div>
   <div class="row">
-    <div class="block Eighties"><a href="/search">
+    <div class="block Eighties"><a href="/search?genre=80s">
         <h1>80s</h1>
       </a>
     </div>
-    <div class="block Hiphop"><a href="/search">
+    <div class="block Hiphop"><a href="/search?genre=hiphop">
         <h1>HipHop</h1>
       </a>
     </div>
-    <div class="block Dub"><a href="/search">
+    <div class="block Dub"><a href="/search?genre=raggae">
         <h1>Dub and Reggae</h1>
       </a>
     </div>
   </div>
   <div class="row">
-    <div class="block Classical"><a href="/search">
+    <div class="block Classical"><a href="/search?genre=classical">
         <h1>Classical</h1>
       </a>
     </div>
-    <div class="block Grunge"><a href="/search">
+    <div class="block Grunge"><a href="/search?genre=grunge">
         <h1>Grunge</h1>
       </a>
     </div>
-    <div class="block Folk"><a href="/search">
+    <div class="block Folk"><a href="/search?genre=folk">
         <h1>Folk</h1>
       </a>
     </div>
