profile page styling

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -2,26 +2,97 @@ body {
   background: #000;
 }
 
-header,
-footer {
+/******************************
+Flexbox Layout
+*******************************/
+
+.header,
+.nav {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.o {
+  color: red;
+  margin: 12px 0 12px 28px;
+}
+
+.header {
+  justify-content: space-between;
+}
+
+.nav {
+  -webkit-flex: 1;
+  flex: 1;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+}
+
+@media all and (min-width: 640px) {
+  .header,
+  .nav {
+    -webkit-flex-direction: row;
+    flex-direction: row;
+  }
+}
+
+@media all and (min-width: 1030px) {
+  .nav {
+    -webkit-flex: none;
+    flex: none;
+  }
+}
+
+.header {
+  padding: 20px 0;
+  margin: 0 auto;
+}
+
+.logo {
+  color: red;
+  width: 195px;
+  background-size: contain;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.nav {
+  list-style: none;
+}
+
+.nav li {
+  margin: 12px 0 12px 28px;
+}
+
+.nav li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.nav li a:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+/* 
+.logo {
   display: block;
   margin: 3px;
   padding: 5px;
-  min-height: 100px;
-  color: #222;
-  background: #e6e7e8;
+  color: red;
+  background-image: "../images/bloodred.jpg";
 }
 
-header nav[role="navigation"] ul {
-  background: rgba(113, 253, 100, 0.664);
-  width: 100%;
-  height: 2em;
+.navbar {
   text-align: right;
   list-style-type: none;
   list-style: none;
-  padding: 10px 0px 5px 10px;
-  color: #111;
-}
+  display: inline-block;
+} */
 
 section[role="main"] {
   width: 100%;
@@ -29,29 +100,18 @@ section[role="main"] {
   margin: 0 auto;
 }
 
-/* .hover {
-  background: gray;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
-}
-
-div:hover > .hover {
-  opacity: 0.4;
-} */
-
-/* .main:hover:not(.noResult):not(.nav) {
-  background-color: rgba(113, 253, 100, 0.664);
-} */
-
 /* generes */
 .Drum {
   background-image: url("../images/DNB.png");
   background-size: cover;
   height: 150px;
+}
+
+.black {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-size: 10px;
   color: white;
 }
 
@@ -146,17 +206,6 @@ a:visited {
   text-decoration: none;
   display: inline-block;
 }
-
-/* .block {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  flex: 1 1 auto; 
-  padding: 10px;
-  margin: 10px;
-  text-align: center;
-} */
 
 .h1 {
   font-family: Roboto;
