--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,26 +1,75 @@
 body {
-  background: gray;
+  background: black;
 }
 
-header,
-footer {
-  display: block;
-  margin: 3px;
-  padding: 5px;
-  min-height: 100px;
-  color: #222;
-  background: #e6e7e8;
+.header,
+.nav {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
 }
 
-header nav[role="navigation"] ul {
-  background: rgba(113, 253, 100, 0.664);
-  width: 100%;
-  height: 2em;
-  text-align: right;
-  list-style-type: none;
+.o {
+  color: red;
+  margin: 12px 0 12px 28px;
+}
+.header {
+  justify-content: space-between;
+}
+
+.nav {
+  -webkit-flex: 1;
+  flex: 1;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+}
+
+@media all and (min-width: 640px) {
+  .header,
+  .nav {
+    -webkit-flex-direction: row;
+    flex-direction: row;
+  }
+}
+
+@media all and (min-width: 1030px) {
+  .nav {
+    -webkit-flex: none;
+    flex: none;
+  }
+}
+
+.header {
+  padding: 20px 0;
+  margin: 0 auto;
+}
+
+.nav {
   list-style: none;
-  padding: 10px 0px 5px 10px;
-  color: #111;
+}
+
+.nav li {
+  margin: 12px 0 12px 28px;
+}
+
+.nav li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.nav li a:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+a:link,
+a:visited {
+  color: red;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
 
 section[role="main"] {
@@ -30,8 +79,8 @@ section[role="main"] {
 }
 
 .container {
-  width: 600px;
-  height: 400px;
+  width: 1000px;
+  height: 800px;
   background: #fff;
   padding: 10px;
   position: relative;
@@ -40,24 +89,34 @@ section[role="main"] {
   flex-direction: column;
 }
 
-.top {
-  flex: 1 1 auto;
-  margin-left: left-width;
-  margin-top: margin;
-  overflow: auto;
-}
-
-.main {
-  flex: 1 1 auto;
-  margin-left: left-width;
-  margin-top: margin;
-  overflow: auto;
-}
-
-/* .head {
-  display: flex;
+.flex-box {
   justify-content: center;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: wrap;
+  background: #000;
+  border: 1px solid silver;
+  padding: 5px;
+  height: 100px;
+  margin: 60px;
+  line-height: 50px;
+  color: white;
+  font-weight: bold;
   text-align: center;
-  border: 1px 1px 1px 1px;
-  width: 900px;
-} */
+}
+
+.flex-container {
+  justify-content: center;
+  flex-direction: column;
+  padding: 300px;
+  margin: 100px;
+  list-style: none;
+  font: white;
+  border: 1px solid silver;
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+}
