--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -21,20 +21,9 @@
   </div>
 
   <div class="flex-container">
-    <div class="box">
-    </div>
-    <ul id="starredEvents">
-      {{#each events}}
-      <li>{{this.name}} [ {{this.classifications.[0].genre.name}} ] <br>
-        where: {{this._embedded.venues.[0].name}} <br>
-        when: {{this.dates.start.localDate}}, {{this.dates.start.localTime}}
-      </li>
-      {{/each}}
-    </ul>
+    {{!-- <p>Starred Events</p> --}}
   </div>
 
-</div>
+  </html>
 
-</html>
-
-<script src="/javascripts/script.js"></script>
+  <script src="/javascripts/script.js"></script>
