--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -78,14 +78,14 @@
     </div>
     <div class="block Hiphop">
       <div class="black">
-        <a href="/search?genre=hiphop">
+        <a href="/search?genre=Hip-Hop">
           <h1>HipHop</h1>
         </a>
       </div>
     </div>
     <div class="block Dub">
       <div class="black">
-        <a href="/search?genre=raggae">
+        <a href="/search?genre=reggae">
           <h1>Dub and Reggae</h1>
         </a>
       </div>
@@ -101,7 +101,7 @@
     </div>
     <div class="block Grunge">
       <div class="black">
-        <a href="/search?genre=grunge">
+        <a href="/search?genre=rock">
           <h1>Grunge</h1>
         </a>
       </div>
