--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/stylesheets/searchStyle.css" />
 
 <header>
-  <h1 role="banner">easytune</h1>
+  <h1 role="banner">easytune</a></h1>
 </header>
 
 <div class="filter">
