--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,26 +1,25 @@
 <link rel="stylesheet" href="/stylesheets/homepage.css" />
 
-{{!-- <header>
-  <div class="logo">
-    <h1 class="flex-box">easytune</h1>
-  </div>
-  <div class="navbar">
-    <nav role="navigation">
-      <ul id="sub">
-        <li><a href="/profile">Profile</a></li>
-        <li><a href="/signup">Logout</a></li>
-      </ul>
-    </nav>
-  </div>
-</header> --}}
 
-<header class="header">
-  <h1 role="banner"><span class="o">easytune</span></h1>
-  <ul class="nav">
-    <li><a href="/profile">Profile</a></li>
-    <li><a href="/signup">Logout</a></li>
-  </ul>
-</header>
+<div id="navBar" class="flex-container">
+
+  <h1 class="flex-box">easytune</h1>
+
+
+  <form action="/login" method="POST" id="form-container">
+    <div class="flex-box">
+      <a href="/profile">Profile</a>
+      <a href="/logout">Logout</a>
+    </div>
+
+
+    {{#if message}}
+    <div class="error-message">{{ message }}</div>
+    {{/if}}
+    <br><br>
+
+  </form>
+</div>
 
 <section role="main">
   <div class="row">
