pushed branch to switch to master

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -10,12 +10,12 @@
   <form action="/login" method="POST" id="form-container">
     <div class="flex-box" color="gray">
       <label for="username">Username: </label>
-      <input id="username2" type="text" name="username" placeholder="JonSnow" style="height: 20px" font-size="10pt">
+      <input id="username2" type="text" name="username" placeholder="JonSnow">
     </div>
     <br><br>
     <div class="flex-box">
       <label for="password">Password: </label>
-      <input id="password2" type="password" name="password" placeholder="Your password" style="height: 20px" font-size="10pt">
+      <input id="password2" type="password" name="password" placeholder="Your password">
     </div>
     <br><br>
 
